--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,9 +10,15 @@ body {
 
 h4 {
   width: 100%;
-  color: #666;
+  color: #333;
   font-size: 16px;
   border-bottom: 1px solid #aaa;
+}
+.header-info {
+  color: #666;
+  font-size: 60%;
+  margin-top: -5px;
+  margin-bottom: 15px;
 }
 
 .footer {
