Reorganize match display

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,6 +20,10 @@ h4 {
   margin-top: -5px;
   margin-bottom: 15px;
 }
+.search-routine-header {
+  margin-top: 10px;
+  margin-bottom: 2px;
+}
 
 .footer {
   position: absolute;
@@ -76,7 +80,7 @@ h4 {
   display: none;
 }
 
-.synonym-badge {
+.match-badge {
   margin-left: 5px;
   font-weight: normal;
 }
