--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -111,3 +111,10 @@ h4 {
   max-height: 30px;
   margin-top: -7px;
 }
+
+#info-alert {
+  display: none;
+}
+#info-alert-button {
+  margin: -5px -5px 10px 10px;
+}
