--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -20,7 +20,7 @@ h4 {
   margin-top: -5px;
   margin-bottom: 15px;
 }
-.search-routine-header {
+.db-entry-header {
   margin-top: 10px;
   margin-bottom: 2px;
 }
@@ -48,7 +48,7 @@ h4 {
 
 .container {
   width: auto;
-  max-width: 700px;
+  max-width: 800px;
   padding: 0 15px;
 }
 
